Added mongodb data store
