# src/main/kotlin/com/bluthbusters/api/controllers/MoviesControllerImpl.kt
@@ -1,7 +1,7 @@
 package com.bluthbusters.api.controllers
 
-import com.bluthbusters.api.controllers.Data.movies
-import com.bluthbusters.api.models.PaginatedList
+import com.bluthbusters.api.models.MovieForm
+import com.bluthbusters.api.services.MoviesDataStore
 import io.vertx.core.AsyncResult
 import io.vertx.core.Future
 import io.vertx.core.Handler
@@ -9,7 +9,20 @@ import io.vertx.core.json.JsonObject
 import io.vertx.ext.web.api.OperationRequest
 import io.vertx.ext.web.api.OperationResponse
 
-class MoviesControllerImpl : MoviesController {
+class MoviesControllerImpl(private val moviesDataStore: MoviesDataStore) : MoviesController {
+  override fun addMovie(
+    body: JsonObject,
+    context: OperationRequest,
+    resultHandler: Handler<AsyncResult<OperationResponse>>
+  ) {
+    try {
+      val form = MovieForm(body)
+      moviesDataStore.add(form, resultHandler.ofId())
+    } catch (e: Exception) {
+      resultHandler.handle(Future.failedFuture(e))
+    }
+  }
+
   override fun listMovies(
     status: String?,
     limit: Long?,
@@ -17,15 +30,10 @@ class MoviesControllerImpl : MoviesController {
     context: OperationRequest,
     resultHandler: Handler<AsyncResult<OperationResponse>>
   ) {
-    val response = OperationResponse.completedWithJson(JsonObject.mapFrom(PaginatedList(2, movies)))
-    resultHandler.handle(Future.succeededFuture(response))
+    moviesDataStore.list(status ?: "all", limit ?: 50, page ?: 1, resultHandler.ofPaginatedList())
   }
 
   override fun findMovie(id: String, context: OperationRequest, resultHandler: Handler<AsyncResult<OperationResponse>>) {
-    val movie = movies.find { it.id == id }
-    val result = if (movie == null) OperationResponse().setStatusCode(404) else OperationResponse.completedWithJson(
-      JsonObject.mapFrom(movie))
-
-    resultHandler.handle(Future.succeededFuture(result))
+    moviesDataStore.find(id, resultHandler.ofNullableJson())
   }
 }
